force-app/main/default/objects/Pricebook2/fields/DefaultForTelesales__c.field-meta.xml
<CustomField>
    <fullName>DefaultForTelesales__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Default for Telesales</label>
    <type>Checkbox</type>
</CustomField>