force-app/main/default/objects/Pricebook2/fields/DiscountPercentage__c.field-meta.xml
<CustomField>
    <fullName>DiscountPercentage__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Discount Percentage</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>