force-app/main/default/objects/Pricebook2/fields/ExclusiveOfGST__c.field-meta.xml
<CustomField>
    <fullName>ExclusiveOfGST__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclusive of GST</label>
    <type>Checkbox</type>
</CustomField>