force-app/main/default/objects/Pricebook2/fields/GSTRate__c.field-meta.xml
<CustomField>
    <fullName>GSTRate__c</fullName>
    <formula>if (ISPICKVAL(Market__c, &apos;MY&apos;), 
$CustomMetadata.AffiliateMetadata__mdt.MY.GSTRate__c, 
if (ISPICKVAL(Market__c, &apos;PH&apos;), 
$CustomMetadata.AffiliateMetadata__mdt.PH.GSTRate__c, 
if (ISPICKVAL(Market__c, &apos;SG&apos;), 
$CustomMetadata.AffiliateMetadata__mdt.SG.GSTRate__c, 
if (ISPICKVAL(Market__c, &apos;TH&apos;), 
$CustomMetadata.AffiliateMetadata__mdt.TH.GSTRate__c, 
if (ISPICKVAL(Market__c, &apos;VN&apos;), 
    $CustomMetadata.AffiliateMetadata__mdt.VN.GSTRate__c,
if (ISPICKVAL(Market__c, &apos;ANZ&apos;), 
    $CustomMetadata.AffiliateMetadata__mdt.ANZ.GSTRate__c,
if (ISPICKVAL(Market__c, &apos;IN&apos;), 
    $CustomMetadata.AffiliateMetadata__mdt.IN.GSTRate__c,
if (ISPICKVAL(Market__c, &apos;ID&apos;), 
    $CustomMetadata.AffiliateMetadata__mdt.ID.GSTRate__c,
if (ISPICKVAL(Market__c, &apos;TW&apos;), 
    $CustomMetadata.AffiliateMetadata__mdt.TW.GSTRate__c,
    0)))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GST Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>