force-app/main/default/objects/Pricebook2/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <label>Market</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ANZ</fullName>
            </value>
            <value>
                <fullName>AU</fullName>
                <isActive>false</isActive>
                <label>AU</label>
            </value>
            <value>
                <fullName>HK</fullName>
            </value>
            <value>
                <fullName>ID</fullName>
            </value>
            <value>
                <fullName>IN</fullName>
            </value>
            <value>
                <fullName>MM</fullName>
            </value>
            <value>
                <fullName>MY</fullName>
            </value>
            <value>
                <fullName>NZ</fullName>
                <isActive>false</isActive>
                <label>NZ</label>
            </value>
            <value>
                <fullName>PH</fullName>
            </value>
            <value>
                <fullName>SG</fullName>
            </value>
            <value>
                <fullName>TH</fullName>
            </value>
            <value>
                <fullName>TW</fullName>
            </value>
            <value>
                <fullName>VN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>