force-app/main/default/objects/Pricebook2/validationRules/ValidPricebookDiscountPercentage.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidPricebookDiscountPercentage</fullName>
    <active>true</active>
    <description>Discount Percentage must be between 0 and 100.</description>
    <errorConditionFormula>AND(NOT(ISNULL(DiscountPercentage__c)), 
OR(DiscountPercentage__c &gt; 1.0, 
DiscountPercentage__c &lt; 0))</errorConditionFormula>
    <errorDisplayField>DiscountPercentage__c</errorDisplayField>
    <errorMessage>Discount Percentage must be between 0 and 100.</errorMessage>
</ValidationRule>